src/Components/Homepage/GuestPage/guest.css
.guestPage {
    display: grid;
    grid-template-columns: 50% 50%;
    max-width: 1200px;
    margin: 10px auto;
    text-align: justify;
}

.descriptionGuest {
    padding-top: 50px;
}

.nameGuest {
    color: red;
}

.image img {
    width: 80vw;
    border-radius: 2vmax;
    text-align: center;
    margin-left: 10px;
    border-left: 10px solid blue;
    border-bottom: 10px solid blue;
    align-items: center;
}

.image {
    display: flex;
    align-items: center;
    justify-content: center;
}

@media (max-width:980px) {
    .guestPage {
        display: flex;
        flex-direction: column;
    }
}

@media (max-width:500px) {
    .guestPage {
        padding: 0px;
        flex-direction: column-reverse;
    }

    .image img {
        max-width: 100%;
        border-radius: 2vmax;
        padding-top: 10px;
        margin: 10px 0px;
        display: flex;
        justify-content: space-evenly;
    }

    .infoGuest {
        margin: 10px;
    }
}

